--- a/.gulp/package.json
+++ b/.gulp/package.json
@@ -8,6 +8,7 @@
     "gulp-conventional-changelog": "^0.7.0",
     "gulp-git": "^1.5.0",
     "gulp-shell": "^0.5.0",
-    "minimist": "^1.2.0"
+    "minimist": "^1.2.0",
+    "run-sequence": "^1.1.4"
   }
 }
