--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,7 @@
 {
   "public": {
-    "ga": {
-      "account": "UA-68367279-1"
+    "analyticsSettings": {
+      "Google Analytics" : {"trackingId": "UA-68367279-1"}
     },
     "randy": {
       "version": "0.6.0"
