--- a/package.json
+++ b/package.json
@@ -1,12 +1,25 @@
 {
   "name": "randy",
-  "version": "1.0.0",
+  "version": "0.7.0",
   "description": "A program that allows the user to add and randomly pick from list.",
   "main": "index.js",
   "dependencies": {
-    "babel-runtime": "^6.23.0"
+    "babel-runtime": "^6.23.0",
+    "meteor-node-stubs": "^0.2.5",
+    "autoprefixer": "^6.3.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "autoprefixer": "^6.3.1"
+  },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {
+        "browsers": [
+          "last 2 versions"
+        ]
+      }
+    }
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
