--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "A program that allows the user to add and randomly pick from list.",
   "main": "index.js",
   "dependencies": {
+    "@babel/runtime": "^7.16.5",
+    "autoprefixer": "^6.3.1",
     "babel-runtime": "^6.23.0",
-    "meteor-node-stubs": "^0.2.5",
-    "autoprefixer": "^6.3.1"
+    "meteor-node-stubs": "^0.2.5"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.1"
